--- a/OptiFORCE/src/main/resources/application.properties
+++ b/OptiFORCE/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/optiforce_db
 spring.datasource.username=postgres
 spring.datasource.password=Aayush@2006
 spring.jpa.hibernate.ddl-auto=update
+
+# AI Service 1 (Productivity/Score Calculation)
+ai.service.productivity-url=http://ai-productivity-service:5001
+
+# AI Service 2 (Optimization/COS Engine)
+ai.service.optimization-url=http://ai-optimization-service:5000
+
+logging.level.com.OptiFORCE.OptiFORCE.integration=DEBUG
