Added performance model

--- a/OptiFORCE/src/main/resources/application.properties
+++ b/OptiFORCE/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=OptiFORCE
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/optiforce_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/optiforce
 spring.datasource.username=postgres
-spring.datasource.password=Aayush@2006
+
 spring.jpa.hibernate.ddl-auto=update
 
 # AI Service 1 (Productivity/Score Calculation)
