JWT auth and AI model endpoints exposed

--- a/OptiFORCE/src/main/resources/application.properties
+++ b/OptiFORCE/src/main/resources/application.properties
@@ -1,14 +1,28 @@
+# SPRING BOOT SETTINGS
 spring.application.name=OptiFORCE
 server.port=8080
+
+# DATABASE SETTINGS
 spring.datasource.url=jdbc:postgresql://localhost:5432/optiforce_db
 spring.datasource.username=postgres
 spring.datasource.password=Aayush@2006
 spring.jpa.hibernate.ddl-auto=update
 
-# AI Service 1 (Productivity/Score Calculation)
-ai.service.productivity-url=http://ai-productivity-service:5001
+# AI SERVICE 1: Productivity Score (FastAPI port 8090)
+ai.service.productivity-url=http://localhost:8090
 
-# AI Service 2 (Optimization/COS Engine)
-ai.service.optimization-url=http://ai-optimization-service:5000
+# AI SERVICE 2: Staffing Optimization (FastAPI port 8091)
+ai.service.optimization-url=http://localhost:8091
 
+# LOGGING (for Feign/REST integration debugging)
 logging.level.com.OptiFORCE.OptiFORCE.integration=DEBUG
+
+# OPTIONAL: Enable Feign client detailed logs for troubleshooting
+logging.level.feign=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# CORS (if needed for test/dev frontends)
+#spring.web.cors.allow-origin-patterns=http://localhost:5173,http://localhost:3000,http://localhost:4200
+
+# OTHER: JPA settings, time zone, etc. (add as needed)
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
